tests/errors/Switch.java
public class Switch {
    public void m() {
        switch(2) {
            int j = 0;
        case 1:
        }
    }
}
